feat: Add new links to HTML

--- a/index.html
+++ b/index.html
@@ -183,6 +183,138 @@
               />
             </svg>
           </div>
+          <div
+            class="list__item"
+            onclick="window.open('https://alphaffiliates.huntflow.io/vacancy/data-engineer', '_blank');"
+          >
+            <a
+              href="https://alphaffiliates.huntflow.io/vacancy/data-engineer"
+              target="_blank"
+              >Data Engineer
+            </a>
+            <svg
+              width="47"
+              height="25"
+              viewBox="0 0 47 25"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M0 12.5H46M46 12.5L34.5 1M46 12.5L34.5 24"
+                stroke="#1A1A1A"
+              />
+            </svg>
+          </div>
+          <div
+            class="list__item"
+            onclick="window.open('https://alphaffiliates.huntflow.io/vacancy/chief-product-officer-cpo', '_blank');"
+          >
+            <a
+              href="https://alphaffiliates.huntflow.io/vacancy/chief-product-officer-cpo"
+              target="_blank"
+              >Chief Product Officer (CPO)
+            </a>
+            <svg
+              width="47"
+              height="25"
+              viewBox="0 0 47 25"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M0 12.5H46M46 12.5L34.5 1M46 12.5L34.5 24"
+                stroke="#1A1A1A"
+              />
+            </svg>
+          </div>
+          <div
+            class="list__item"
+            onclick="window.open('https://alphaffiliates.huntflow.io/vacancy/legal-counsel-2', '_blank');"
+          >
+            <a
+              href="https://alphaffiliates.huntflow.io/vacancy/legal-counsel-2"
+              target="_blank"
+              >Legal Counsel
+            </a>
+            <svg
+              width="47"
+              height="25"
+              viewBox="0 0 47 25"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M0 12.5H46M46 12.5L34.5 1M46 12.5L34.5 24"
+                stroke="#1A1A1A"
+              />
+            </svg>
+          </div>
+          <div
+            class="list__item"
+            onclick="window.open('https://alphaffiliates.huntflow.io/vacancy/sales-trainer', '_blank');"
+          >
+            <a
+              href="https://alphaffiliates.huntflow.io/vacancy/sales-trainer"
+              target="_blank"
+              >Sales Trainer
+            </a>
+            <svg
+              width="47"
+              height="25"
+              viewBox="0 0 47 25"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M0 12.5H46M46 12.5L34.5 1M46 12.5L34.5 24"
+                stroke="#1A1A1A"
+              />
+            </svg>
+          </div>
+          <div
+            class="list__item"
+            onclick="window.open('https://alphaffiliates.huntflow.io/vacancy/smm-manager', '_blank');"
+          >
+            <a
+              href="https://alphaffiliates.huntflow.io/vacancy/smm-manager"
+              target="_blank"
+              >SMM Manager
+            </a>
+            <svg
+              width="47"
+              height="25"
+              viewBox="0 0 47 25"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M0 12.5H46M46 12.5L34.5 1M46 12.5L34.5 24"
+                stroke="#1A1A1A"
+              />
+            </svg>
+          </div>
+          <div
+            class="list__item"
+            onclick="window.open('https://alphaffiliates.huntflow.io/vacancy/ux-graphic-designer', '_blank');"
+          >
+            <a
+              href="https://alphaffiliates.huntflow.io/vacancy/ux-graphic-designer"
+              target="_blank"
+              >UX/Graphic Designer
+            </a>
+            <svg
+              width="47"
+              height="25"
+              viewBox="0 0 47 25"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M0 12.5H46M46 12.5L34.5 1M46 12.5L34.5 24"
+                stroke="#1A1A1A"
+              />
+            </svg>
+          </div>
         </div>
       </section>
       <section id="leaders" class="main__leaders leaders">
